# linalg

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  README.md  Taskfile.yaml
.github/workflows/: ci.yml
include/linalg/: constants.hpp  line.hpp  mat.hpp  mat3.hpp  mat4.hpp  plane.hpp  point.hpp  projection.hpp  quaternion.hpp  transform.hpp  utility.hpp  vec.hpp
include/mirage_math/: constants.hpp  line.hpp  mat.hpp  mat3.hpp  mat4.hpp  plane.hpp  point.hpp  quaternion.hpp  transform.hpp  vec.hpp
test/: CMakeLists.txt  line.test.cpp  mat3.test.cpp  mat4.test.cpp  plane.test.cpp  point3.test.cpp  projection.test.cpp  quaternion.test.cpp  test_utils.hpp  transform.test.cpp  utility.test.cpp  vec3.test.cpp  vec4.test.cpp
test/benchmarks/: mat.bench.cpp  vec.bench.cpp
